--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "s": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,10 +12,14 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "router": "^1.3.5",
+    "toastr": "^2.1.4",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.2",
-    "vue-router": "^3.5.0"
+    "vue-router": "^3.5.0",
+    "vue-toastr": "^2.1.2",
+    "vue-toastr-2": "^0.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
